bundled_metadata/force-app/main/default/objects/AFH_Scoring_Matrix__mdt/AFH_Scoring_Matrix__mdt.object-meta.xml
<CustomObject>
    <label>Scoring Matrix</label>
    <pluralLabel>Scoring Matrix</pluralLabel>
</CustomObject>