bundled_metadata/force-app/main/default/objects/AFH_Scoring_Matrix__mdt/fields/AFH_Evaluation_Time__c.field-meta.xml
<CustomField>
    <fullName>AFH_Evaluation_Time__c</fullName>
    <description>Stores the evaluation time period used in scoring calculations.</description>
    <label>AFH Evaluation Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>