bundled_metadata/force-app/main/default/objects/AFH_Scoring_Matrix__mdt/fields/AFH_InactivityDays__c.field-meta.xml
<CustomField>
    <fullName>AFH_InactivityDays__c</fullName>
    <description>Stores the number of inactivity days used to determine whether a record is considered inactive during scoring.</description>
    <label>AFH InactivityDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>