bundled_metadata/force-app/main/default/objects/AFH_Scoring_Matrix__mdt/fields/AFH_Score_Count__c.field-meta.xml
<CustomField>
    <fullName>AFH_Score_Count__c</fullName>
    <description>Stores the score value or count applied during the scoring evaluation.</description>
    <label>Score Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>