bundled_metadata/force-app/main/default/objects/AFH_Scoring_Matrix__mdt/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>AFH_Score_Count__c</columns>
    <columns>AFH_Evaluation_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>